--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -11,6 +11,17 @@ img {
   font-size: 36px;
   font-weight: 900;
 }
+.center-me {
+  text-align: center;
+}
+.list {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+text{
+  max-width: 200px;
+}
 
 /* do not edit this footer */
 .footer {
