--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,10 +5,37 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
   width: 600px;
+}
+.header{
+  display: flex;
+  justify-content: space-between;
+}
+.footer{
+  background-color: gainsboro;
+  display: flex;
+  justify-content: space-between;
+}
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex:1;
+}
+ul {
+  display: flex;
+  gap: 10px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
 }
 
 button {
@@ -16,6 +43,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  margin-top: 10px;
+  padding: 8px 16px;
 }
 
 input {
@@ -23,4 +52,9 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+a {
+  text-decoration: none;
+  font-size: small;
+  color: grey;
 }
