--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,18 +2,22 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
-  height: 72px;
+  height: 20px;
   background: darkmagenta;
   color: white;
+  font-weight: 800;
+  padding: 5%;
 }
 
 .footer {
-  height: 72px;
   background: #eee;
   color: darkmagenta;
+  text-align: center;
 }
 
 .sidebar {
@@ -26,4 +30,25 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  margin: 2%;
+  max-width: 200px;
+  padding: 1%;
+}
+.container{
+  display: flex;
+}
+ul {
+  list-style: none;
+  padding: 5%;
+}
+li {
+  padding:10%;
+}
+a{
+  text-decoration: none;
+  color: azure;
+}
+.wrap{
+  display: flex;
+  flex-wrap: wrap;
 }
