--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -9,6 +9,14 @@ html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: inline-grid;
+  grid-template: 1fr 1fr 4fr 1fr/1fr 3fr;
+  gap: 15px;
+  grid-template-areas:
+  "Header Header"
+  "Siderbar Nav"
+  "Siderbar Article"
+  "footer footer"
 }
 
 .container div {
@@ -22,22 +30,28 @@ html {
 
 .header {
   background-color: #006157;
+  grid-area: Header;
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-area: Siderbar;
+
 }
 
 .nav {
   background-color: #642cde;
+  grid-area:Nav;
 }
 
 .article {
   background-color: #7E1DC3;
+  grid-area: Article;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-area:footer;
 }
 
 .article p {
